--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,30 @@ body {
   text-decoration: none;
   font-weight: 500;
   color: var(--text-dark-grey);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address-address,
+.address-mail,
+.address-tel {
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation li a:focus,
+.navigation li a:hover,
+.nav-links-parent li a:focus,
+.nav-links-parent li a:hover,
+.address-address:focus,
+.address-address:hover,
+.address-mail:focus,
+.address-mail:hover,
+.address-tel:focus,
+.address-tel:hover {
+  color: var(--text-blue);
 }
 
 .nav-links-parent li a {
@@ -174,13 +198,15 @@ body {
   padding: 6px 22px;
   border-radius: 4px;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .ul-sec-1-portfolio li button:focus,
 .ul-sec-1-portfolio li button:hover {
   color: var(--text-white);
   background-color: var(--bg-blue);
-  border: none;
   font-size: 16px;
   line-height: 1.62;
   font-weight: 500;
@@ -206,19 +232,6 @@ body {
 .par-sec-2-portfolio {
   font-size: 16px;
   line-height: 1.87;
-}
-
-.navigation li a:focus,
-.navigation li a:hover,
-.nav-links-parent li a:focus,
-.nav-links-parent li a:hover,
-.address-address:focus,
-.address-address:hover,
-.address-mail:focus,
-.address-mail:hover,
-.address-tel:focus,
-.address-tel:hover {
-  color: var(--text-blue);
 }
 
 /*29.12.2022*/
@@ -252,9 +265,25 @@ body {
   /* border: dotted violet 2px; */
 }
 
+.icon-with-text {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .icon-with-text:hover,
 .icon-with-text:focus {
   color: var(--text-blue);
+}
+
+.icon-nav {
+  fill: var(--icons-grey);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-with-text:hover .icon-nav,
@@ -361,6 +390,17 @@ body {
   flex-basis: calc((100% - 2 * 30px) / 3);
   max-width: 370px;
   max-height: 404px;
+  transition-property: background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-cards-item:hover,
+.portfolio-cards-item:focus {
+  background-color: var(--bg-white);
+  border: 0 1px 1px 1px solid var(--border-grey);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
 }
 
 .section {
@@ -383,29 +423,17 @@ header {
   padding-left: 93px;
 }
 
-.icon-nav {
-  fill: var(--icons-grey);
-}
-
-.icon-nav:hover,
-.icon-nav:focus {
-  fill: var(--icons-blue);
-}
-
 .icon-team {
   fill: var(--icons-semi-grey);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-team:hover,
 .icon-team:focus {
   fill: var(--icons-white);
   cursor: pointer;
-}
-
-.icon-with-text {
-  display: flex;
-  align-items: center;
-  gap: 10px;
 }
 
 .icon-our-assets {
@@ -438,6 +466,9 @@ header {
   border-radius: 4px;
   margin-top: 50px;
   fill: var(--icons-semi-grey);
+  transition-property: fill, border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-client:focus,
@@ -447,13 +478,12 @@ header {
   cursor: pointer;
 }
 
-.icon-footer {
+/* .icon-footer {
   fill: var(--icons-white);
-}
+} */
 
 .icon-footer:hover,
 .icon-footer:focus {
-  fill: var(--icons-white);
   cursor: pointer;
 }
 
@@ -479,14 +509,6 @@ header {
   margin-left: 70px;
 }
 
-.portfolio-cards-item:hover,
-.portfolio-cards-item:focus {
-  background: var(--bg-white);
-  border: 0 1px 1px 1px solid var(--border-grey);
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  cursor: pointer;
-}
-
 .circle {
   display: flex;
   justify-content: center;
@@ -497,6 +519,9 @@ header {
   border-radius: 100px;
   margin-top: 16px;
   margin-bottom: 5px;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .circle:hover {
@@ -513,6 +538,9 @@ header {
   border-radius: 100px;
   margin-top: 16px;
   margin-bottom: 5px;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .circle2:hover {
