--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
   --icons-white: #ffffff;
   --icons-blue: #2196f3;
   --icons-transparent-grey: rgba(255, 255, 255, 0.1);
+  --label: rgba(47, 48, 58, 0.8);
 }
 
 body {
@@ -146,6 +147,28 @@ body {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+}
+
+.what-we-do-index {
+  position: relative;
+  height: 294px;
+}
+
+.label-what-we-do-index {
+  background-color: var(--label);
+  color: var(--text-white);
+  font-weight: bold;
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  padding: 25px;
+  text-align: center;
+  bottom: 0;
+}
+
+.label-what-we-do-index:focus,
+.label-what-we-do-index:hover {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .sec-4-index {
