--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --bg-blue-rgba: rgba(33, 150, 243, 0.9);
   --bg-grey: #f5f4fa;
   --bg-white: #ffffff;
+  --bg-backdrop: rgba(0, 0, 0, 0.2);
   --border-grey: #eeeeee;
   --border-header: #ececec;
   --border-semi-grey: #afb1b8;
@@ -17,6 +18,7 @@
   --icons-semi-grey: #afb1b8;
   --icons-white: #ffffff;
   --icons-blue: #2196f3;
+  --icons-border: #0000001a;
   --icons-transparent-grey: rgba(255, 255, 255, 0.1);
   --label: rgba(47, 48, 58, 0.8);
 }
@@ -589,13 +591,6 @@ header {
 
 /* 15.01 */
 
-.is-hidden {
-  pointer-events: none;
-  visibility: hidden;
-  opacity: 0;
-  transform: translateX(-50%) translateY(-50%) scale(0) rotate(0deg) skew(40deg, 40deg);
-}
-
 .box {
   position: relative;
   width: 370px;
@@ -621,4 +616,62 @@ header {
 
 .box:hover .overlay {
   transform: translateY(-100%);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: o;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  background-color: var(--bg-backdrop);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+}
+
+.is-hidden {
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+    /* transform: translateX(-50%) translateY(-50%) rotate(0deg)*/ 
+    scale(0) ; 
+}
+
+.modal {
+  display: block;
+  position: absolute;
+  top: 221;
+  left: 536;
+  width: 528px;
+  height: 581px;
+  border-radius: 4px;
+  background-color: var(--bg-white);
+  z-index: 1;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    /* przy tych transformacjach translateX/Y należy ustawić top i left: 50% 
+  top: 50%;
+  left: 50%;  */
+  transition-property: visibility, opacity, transform;
+  transition-duration: 2s;
+  transform: /*rotate(360deg)*/ scale(1);
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: var(--bg-white);
+  border: 1px solid var(--icons-border);
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
