--- a/css/styles.css
+++ b/css/styles.css
@@ -636,8 +636,7 @@ header {
   pointer-events: none;
   visibility: hidden;
   opacity: 0;
-    /* transform: translateX(-50%) translateY(-50%) rotate(0deg)*/ 
-    scale(0) ; 
+  transform: scale(0) /* translateX(-50%) translateY(-50%) rotate(0deg)*/;
 }
 
 .modal {
@@ -651,7 +650,7 @@ header {
   background-color: var(--bg-white);
   z-index: 1;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    /* przy tych transformacjach translateX/Y należy ustawić top i left: 50% 
+  /* przy tych transformacjach translateX/Y należy ustawić top i left: 50% 
   top: 50%;
   left: 50%;  */
   transition-property: visibility, opacity, transform;
