--- a/css/styles.css
+++ b/css/styles.css
@@ -630,7 +630,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden {
@@ -655,7 +655,7 @@ header {
   top: 50%;
   left: 50%;  */
   transition-property: visibility, opacity, transform;
-  transition-duration: 2s;
+  transition-duration: 4s;
   transform: /*rotate(360deg)*/ scale(1);
   visibility: visible;
   opacity: 1;
