--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@ body {
 
 .what-we-do-index {
   position: relative;
+  width: 370px;
   height: 294px;
 }
 
@@ -182,7 +183,7 @@ body {
   color: var(--text-white);
   font-weight: bold;
   position: absolute;
-  width: 370px;
+  width: 100%;
   height: 70px;
   bottom: 0;
 }
